--- a/style.css
+++ b/style.css
@@ -33,16 +33,26 @@ body{
     margin-top: 0px;
 }
 
-#p1{
+.p1{
     text-align: unset;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.5em;
     font-weight: bold;
-    margin: 2px;
+    margin: 15px;
+}
+
+.p2{
+    text-align: unset;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.3em;
+    font-weight: bold;
+    margin: 15px;
 }
 
 .h2-2{
     text-align: center;
     padding: 10px;
+    font-size: 2em;
     color: brown;
     border: black solid 2px;
     background-color: rgb(235, 182, 102);
@@ -51,6 +61,7 @@ body{
 
 .ul-1{
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.5em;
     font-weight: 900;
 }
 
@@ -58,8 +69,13 @@ body{
     color: brown;
     font-weight: bolder;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 15px;
 }
 
+.imagem-portifolio{
+    width: 70%;
+    margin: 15px;
+}
 .formulario{
     font-weight: bold;
     height: 100px;
@@ -67,6 +83,7 @@ body{
     border-style: solid;
     border-width: 5px;
     padding: 10px;
+    margin: 15px;
 }
 
 .form-group{
@@ -76,6 +93,7 @@ body{
 .p-link-pessoal{
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+    margin: 15px;
     
 }
 
@@ -87,4 +105,14 @@ body{
 .link-pessoal:hover{
     color: blue;
     text-decoration: none;
+}
+
+#rodape{
+    background-color: black;
+    border: black solid 2px;
+    font-weight: bolder;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    color: aqua;
+    padding: 10px;
 }
