--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/* Aqui está a beleza da página, sendo a estilização para as trés páginas, onde foi utilizados, id, class, tag e pseudo classe, para fazer a estilização da página e trazer uma boa navegabilidade e acessibilidade. */
+/* Aqui está a beleza da página, sendo a estilização para as 4 páginas, onde foi utilizados, id, class, tag e pseudo classe, para fazer a estilização da página e trazer uma boa navegabilidade e acessibilidade. */
 
 body{
     background-color: blanchedalmond;
